fixed login overlap

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -9,6 +9,24 @@ body {
 
 .profile-dropdown {
   position: absolute;
+  z-index: 1000;
+  /* border: 1px solid grey; */
+  border-radius: 25%;
+  display: flex;
+  align-items: center;
+  /* flex-direction: column; */
+  justify-content: center;
+  margin-left: -100px;
+  background-color: rgb(255, 255, 255);
+}
+
+.profile-dropdown li {
+  margin: 5px;
+}
+
+.profile-dropdown button {
+  margin-right: 15px;
+  margin: 5px;
 }
 
 .hidden {
